Bug 304429 - [sfs] Eliminate issues discovered by FindBugs